fix(themes): Alignement barre du haut + pastille mails

--- a/skins/mel_elastic/themes/super-classic/style/less/mails.less
+++ b/skins/mel_elastic/themes/super-classic/style/less/mails.less
@@ -28,6 +28,17 @@ html.theme-super-classique {
                 top: 5px;
               }
             }
+
+            > ul li[aria-level="2"]:first-of-type 
+            {
+              .unreadcount {
+                top: 15px !important;
+              }
+
+              div.treetoggle {
+                top: 15px !important;
+              }
+            }
           }
 
           li.selected {
